cncProd/force-app/main/default/objects/Defect_Header__c/Defect_Header__c.object-meta.xml
<CustomObject>
    <label>Defect Header</label>
    <nameField>
        <displayFormat>DH-{0000000}</displayFormat>
        <label>Defect Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>