cncProd/force-app/main/default/objects/Defect_Header__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Defect Headers</relationshipLabel>
    <relationshipName>Defect_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>