cncProd/force-app/main/default/objects/Defect_Header__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <label>Expected Booking Date</label>
    <type>Date</type>
</CustomField>