cncProd/force-app/main/default/objects/Defect_Header__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Defect Headers</relationshipLabel>
    <relationshipName>Defect_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>