cncProd/force-app/main/default/objects/Defect_Header__c/fields/Customer_Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acknowledgement_Date__c</fullName>
    <label>Customer Acknowledgement Date</label>
    <type>DateTime</type>
</CustomField>