cncProd/force-app/main/default/objects/Defect_Header__c/fields/Rectified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Rectified_Date_Time__c</fullName>
    <label>Rectified Date/Time</label>
    <type>DateTime</type>
</CustomField>