cncProd/force-app/main/default/objects/Defect_Header__c/fields/Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>Sales_Agreement__c</referenceTo>
    <relationshipLabel>Defect Headers</relationshipLabel>
    <relationshipName>Defect_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>