cncProd/force-app/main/default/objects/Defect_Header__c/fields/Service_Advisor_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Advisor_Assignment_Date_Time__c</fullName>
    <label>Service Advisor Assignment Date/Time</label>
    <type>DateTime</type>
</CustomField>