cncProd/force-app/main/default/objects/Defect_Header__c/fields/SLA_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SLA (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>