cncProd/force-app/main/default/objects/Defect_Header__c/fields/Time_taken_to_rectify__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_to_rectify__c</fullName>
    <label>Time Taken to Rectify (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>