cncProd/force-app/main/default/objects/Defect_Header__c/listViews/Eunos.listView-meta.xml
<ListView>
    <fullName>Eunos</fullName>
    <columns>NAME</columns>
    <columns>Franchise__c</columns>
    <columns>Car_Reg_No__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Service_Advisor__c</columns>
    <columns>Milestone_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>Eunos</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rectified</value>
    </filters>
    <label>Eunos</label>
</ListView>